# github-trending-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/http/v1/: list_trending_developer_controller.rs  list_trending_repository_controller.rs  mod.rs
src/parser/: developer_parser.rs  mod.rs  repository_parser.rs
